--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         header {
             background-image:url('royal.jpg') ;
-            color: cyan;
+            color: black;
             text-align: center;
             padding: 10.10mm;
             position: relative;
